// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vars > service > load > should allow content extending in PresetsLoaded hook 1`] = `
"field1: value1
field2: value2
"
`;

exports[`vars > service > load > should allow content updating in PresetsLoaded hook 1`] = `
"field1: value2
"
`;

exports[`vars > service > load > should load presets file default scope 1`] = `
"field1: value1
field2: value2
"
`;

exports[`vars > service > load > should load presets file target scope 1`] = `
"field1: value3
field2: value2
"
`;

exports[`vars > service > load > should load super layers 1`] = `
"field1: value1
override1: value1
override2: value1
override3: value1
override4: value1
field2: value1
sub1: value1
sub2: value1
override5: value1
override6: value1
subsub1: value1
subsub2: value1
"
`;

exports[`vars > service > load > should override default presets with vars 1`] = `
"field1: value6
field2: value2
"
`;

exports[`vars > service > load > should override target presets with vars 1`] = `
"field1: value6
field2: value2
"
`;

exports[`vars > service > load > should use vars if presets not found 1`] = `
"field1: value6
"
`;
